# duatic_control

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: build-humble.yml  build-jazzy.yml  build-kilted.yml  build-rolling.yml  ci.yml  pre-commit.yml  reusable_ici.yml
config/: controller_manager.yaml
launch/: control.launch.py
scripts/: controller_activator_node.py  hardware_activator_node.py  joint_state_merger_node.py  param_loader_node.py
urdf/: plugins.urdf.xacro
