<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duatic_control</name>
  <version>0.0.0</version>
  <description>ros2control Wrapper for Duatic Robots</description>
  <maintainer email="mbloechli@student.ethz.ch">root</maintainer>
  <license>Duatic</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
